Fixed image spacing for news and blogs on homepage. Also fixed text wrapping below image.

--- a/src/components/c-news-list/style.ie.styl
+++ b/src/components/c-news-list/style.ie.styl
@@ -1,11 +1,8 @@
 // include the toolkit (a suite of variables, classes and mixins)
-@require "../../globals/css/_ietoolkit";
+@require "../../globals/css/_ietoolkit"
 
-.c-blog-feed {
-  ieoldcf();
-
+.c-news-list{
   a {
     float:left;
   }
-  
 }
