--- a/src/components/c-news-list/style.styl
+++ b/src/components/c-news-list/style.styl
@@ -1,10 +1,11 @@
 // include the toolkit (a suite of variables, classes and mixins)
-@require "../../globals/css/_toolkit";
+@require "../../globals/css/_ietoolkit"
 
-.c-blog-feed {
-  clearfix();
+
+.c-news-list{
 
   .c-article-item img:last-child {
     margin-right: $spacing;
   }
+
 }
